--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 
 
-    <div class="div4 lg:w-[1290px] lg:h-[1290px] md:w-[690px] md:h-[1070px] m-auto w-[375px] h-[1000px] ">
+    <div class="div4  lg:w-[1290px] lg:h-[1290px] md:w-[690px] md:h-[1070px] m-auto w-[375px] h-[1000px] ">
 
         <h2 class="md:text-[40px] font-bold text-[26px] font-bold text-center px-[30px] pt-5 pb-[30px]">Простой
             дружелюбный сервис</h2>
@@ -163,7 +163,7 @@
     </div>
 
     <div
-        class="div5 lg:w-[1520px] lg:h-[1233px] md:w-[690px] md:h-[1350px]  w-[375px] h-[1460px] m-auto mt-[30px] bg-[#F2F2F2]">
+        class="div5  lg:w-[1520px] lg:h-[1233px] md:w-[690px] md:h-[1350px]  w-[375px] h-[1460px] m-auto mt-[30px] bg-[#F2F2F2]">
         <div class="div5bolo ">
             <div class="md:w-[690px] md:h-[232px] w-[346px] h-[260px] mb-[20px]  m-auto">
                 <h2 class="md:text-[35px] text-[25px] font-bold mb-5">Управление оборудованием и документооборот</h2>
@@ -240,7 +240,7 @@
         </div>
     </div>
 
-    <div class="div6 lg:w-[1520px] lg:h-[1770px] md:w-[768px] md:h-[2000px] w-[350px] h-[1260px] m-auto ">
+    <div class="div6  lg:w-[1520px] lg:h-[1770px] md:w-[768px] md:h-[2000px] w-[350px] h-[1260px] m-auto ">
         <div
             class="div6bolo lg:flex lg:flex-row-reverse lg:justify-around md:flex md:flex-col md:justify-center md:items-center md:gap-10 mb-13">
             <div
@@ -292,7 +292,7 @@
         <img class="m-auto" src="./Frame 964.png" alt="">
     </div>
 
-    <div class="div7 lg:w-[1520px] lg:h-[760px] lg:mt-[100px] md:w-[768px] md:h-[1000px] w-[350px] h-[760px] m-auto ">
+    <div class="div7  lg:w-[1520px] lg:h-[760px] lg:mt-[100px] md:w-[768px] md:h-[1000px] w-[350px] h-[760px] m-auto ">
         <div
             class=" lg:flex lg:flex-row-reverse lg:justify-around lg:items-center md:flex md:flex-col md:justify-center md:items-center md:gap-10 mb-13">
             <div
@@ -329,7 +329,7 @@
     </div>
 
     <div
-        class="div8 lg:w-[1520px] lg:h-[750px] md:w-[690px] md:h-[1020px]  w-[375px] h-[960px] m-auto mt-[30px] bg-[#F2F2F2]">
+        class="div8  lg:w-[1520px] lg:h-[750px] md:w-[690px] md:h-[1020px]  w-[375px] h-[960px] m-auto mt-[30px] bg-[#F2F2F2]">
         <div class="div8bolo lg:flex ">
             <div
                 class="lg:w-[769px] lg:h-[280px] md:w-[690px] md:h-[256px] w-[342px] h-[176px] mb-[20px] pl-[-40px]  m-auto">
@@ -383,7 +383,7 @@
 
 
     <div
-        class="div9 lg:w-[1290px] lg:h-[640px] md:w-[690px] md:h-[650px] lg:mt-15   md:mt-10 m-auto w-[375px] h-[740px] ">
+        class="div9  lg:w-[1290px] lg:h-[640px] md:w-[690px] md:h-[650px] lg:mt-15   md:mt-10 m-auto w-[375px] h-[740px] ">
 
         <h2 class="md:text-[40px] font-bold text-[26px] font-bold text-center px-[30px] pt-5 pb-[30px]">Поможем,
             подскажем</h2>
@@ -452,7 +452,7 @@
 
     </div>
 
-    <div class="div10 lg:w-[1520px] lg:h-[775px] lg:flex lg:flex-row lg:justify-around mb-5  md:w-[768px] md:h-[738px]  md:gap-[25px]
+    <div class="div10  lg:w-[1520px]  lg:h-[775px] lg:flex lg:flex-row lg:justify-around mb-5  md:w-[768px] md:h-[738px]  md:gap-[25px]
         flex flex-col items-center w-[375px] h-[591px] gap-[25px] m-auto bg-[#F2F2F2]">
 
         <div class="div10bolo lg:w-[769px] lg:h-[316px] md:w-[690px] md:h-[210] w-[345px] h-[200px]  ">
@@ -469,16 +469,17 @@
             alt="">
     </div>
 
-    <div class="div11 lg:w-[1520px] lg:h-[775px] lg:flex lg:flex-row-reverse lg:justify-around  md:w-[768px] md:h-[900px]  md:gap-[25px]
-        flex flex-col items-center w-[375px] h-[680px] gap-[25px] m-auto ">
+    <div class="div11  lg:w-[1520px] lg:h-[775px] lg:flex lg:m-[0px] lg:m-auto lg:flex-row-reverse lg:justify-around  md:w-[768px] md:h-[900px]  md:gap-[25px]
+        flex flex-col items-center w-[375px] h-[580px] gap-[25px] m-auto lg:m-[0px] lg:p-[0px]">
 
-        <div class="div10bolo lg:w-[697px] lg:h-[430px] md:w-[694px] md:h-[219] w-[348px] h-[327px]  ">
+        <div class="div10bolo lg:w-[697px] lg:h-[430px] md:w-[694px] md:h-[219] w-[348px] h-[220px]  ">
             <h2 class="lg:text-[58px] md:text-[40px] text-[26px] font-bold">Кому подходит</h2>
 
-            <div class="flex flex-col justify-between lg:w-[769px] lg:h-[316px] md:w-[690px] md:h-[210] w-[345px] h-[200px]">
+            <div
+                class="flex flex-col justify-between lg:p-[0px] lg:w-[469px] lg:h-[316px] md:w-[690px] md:h-[210] w-[345px] h-[200px]">
                 <div class="flex justify-start items-center  ">
                     <img class="w-[9px] h-[9px] m-4 mt-[25px]" src="./Снимок экрана 2026-02-19 080258.png" alt="">
-                    <p class="lg:text-[24px] md:text-[24px] text-[14px] text-[#575757] font-[400] pr-10">
+                    <p class="lg:text-[24px] md:text-[24px] text-[14px] text-[#575757] font-[400] ">
                         Для коммерческих организаций до 100 сотрудников
                     </p>
                 </div>
@@ -500,7 +501,7 @@
                 <div class="flex justify-start items-center">
                     <img class="w-[9px] h-[9px] m-4 mt-[25px]" src="./Снимок экрана 2026-02-19 080258.png" alt="">
                     <p class="lg:text-[24px] md:text-[24px] text-[14px] font-[400] text-[#575757] pr-10 ">
-                       Без тяжелых и вредных условий труда
+                        Без тяжелых и вредных условий труда
                     </p>
                 </div>
             </div>
@@ -511,6 +512,24 @@
             alt="">
     </div>
 
+    <div class="div12 text-center lg:w-[862px] lg:h-[420px] lg:mt-5 md:w-[580px] md:h-[300px] w-[345px] h-[202px] mt-10  m-auto">
+
+        <div class="lg:w-[862px] lg:h-[220px] md:w-[558px] md:h-[140px] w-[345px] h-[92px] m-auto ">
+            <h2 class=" lg:text-[50px] md:text-[30px] text-[27px]  font-bold text-center md:mt-11 lg:pt-[40px] md:pt-[20px] mt-[10px]">
+                Вы всё ещё думаете? <br>
+                Просто попробуйте
+            </h2>
+
+
+        </div>
+
+        <button
+            class=" red lg:w-[420px] lg:h-[72px]  w-[307px] h-[60px] md:m-[0px] md:mt-11 lg:mt-[10px] md:mt-[10px] mt-[10px]  bg-[#843546] border-[1px] border-solid border-[#6A3B45]  rounded-[6px]">
+            <p class=" lg:text-[21px] text-[16px] font-[600] text-[white] ">Попробовать бесплатно</p>
+        </button>
+    </div>
+
+    
 
 </body>
 
