--- a/index.html
+++ b/index.html
@@ -512,10 +512,12 @@
             alt="">
     </div>
 
-    <div class="div12 text-center lg:w-[862px] lg:h-[420px] lg:mt-5 md:w-[580px] md:h-[300px] w-[345px] h-[202px] mt-10  m-auto">
+    <div
+        class="div12 text-center lg:w-[862px] lg:h-[420px] lg:mt-5 md:w-[580px] md:h-[300px] w-[345px] h-[202px] mt-10  m-auto">
 
         <div class="lg:w-[862px] lg:h-[220px] md:w-[558px] md:h-[140px] w-[345px] h-[92px] m-auto ">
-            <h2 class=" lg:text-[50px] md:text-[30px] text-[27px]  font-bold text-center md:mt-11 lg:pt-[40px] md:pt-[20px] mt-[10px]">
+            <h2
+                class=" lg:text-[50px] md:text-[30px] text-[27px]  font-bold text-center md:mt-11 lg:pt-[40px] md:pt-[20px] mt-[10px]">
                 Вы всё ещё думаете? <br>
                 Просто попробуйте
             </h2>
@@ -529,7 +531,184 @@
         </button>
     </div>
 
-    
+    <div
+        class="div13 lg:flex lg:hidden lg:w-[1520px] lg:h-[461px] md:w-[768px] md:h-[814px] w-[375px] h-[551px] bg-[black]">
+
+        <div class="">
+
+        </div>
+        <div
+            class="lg:w-[1520px]  lg:h-[461px] md:w-[768px] md:h-[200px] w-[375px] h-[80px] flex justify-center gap-3 items-centergap-2.5 text-center py-[25px]  ">
+            <p class="md:text-[30px] text-[24px] font-bold text-[gray] md:pt-[100px] ">≡</p>
+            <p class="md:text-[30px] text-[24px]  font-bold text-[gray] md:pt-[100px]">Карта сайта</p>
+        </div>
+        <hr class=" w-[330px] m-auto border-solid border-[2px] border-[gray]">
+
+        <div class=" md:w-[768px] md:h-[300px] w-[375px] h-[140px]  flex flex-col items-center">
+            <h1 class="md:text-[35px] text-[20px]  font-bold text-[gray] mb-2.5 md:mb-[30px] md:pt-[60px]">(3452)
+                90-90-09</h1>
+
+            <a class="md:text-[35px] text-[20px]  font-bold text-[gray] md:mb-[40px] mb-5 "
+                href="">office@metrologu.ru</a>
+
+            <img class=" md:w-[40px] md:h-[40px] w-[35px] h-[30px]" src="./Снимок экрана 2026-02-19 101527.png" alt="">
+        </div>
+
+        <hr class=" w-[330px] m-auto border-solid border-[2px] border-[gray]">
+
+        <div class=" md:w-[768px] md:h-[157px] w-[375px] h-[120px]  flex flex-col items-center">
+            <h2 class="md:text-[30px] text-[20px]  font-bold text-[gray] mb-1 pt-1.5">Вся активность</h2>
+            <h2 class="md:text-[30px] text-[20px]  font-bold text-[gray] mb-1">Политика конфиденциальность</h2>
+            <h2 class="md:text-[30px] text-[20px]  font-bold text-[gray] mb-1">Администрация</h2>
+        </div>
+
+        <hr class=" w-[330px] m-auto border-solid border-[2px] border-[gray]">
+
+
+
+        <div class=" md:w-[768px] md:h-[157px] w-[375px] h-[70px]  gap-5 flex justify-center items-center">
+            <img class="w-[60px] h-[60px]" src="./Снимок экрана 2026-02-19 102732.png" alt="">
+            <img class="w-[60px] h-[60px]" src="./Снимок экрана 2026-02-19 102746.png" alt="">
+
+        </div>
+
+        <hr class=" w-[330px] m-auto border-solid border-[2px] border-[#666666]">
+
+        <div
+            class=" md:w-[768px] md:h-[814px] w-[375px] h-[70px  gap-5 flex md:hidden justify-center items-center ">
+
+            <div class="flex items-center gap-2 ">
+                <img src="./Снимок экрана 2026-02-19 103023.png" alt="">
+                <h1 class="text-[20px]  font-bold text-[#696969]">2009-2024 metrologu.ru</h1>
+                <img class="w-[20px] h-[20px]" src="./Снимок экрана 2026-02-19 103104.png" alt="">
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="div14 lg:w-[1420px] lg:h-[561px] bg-[black] m-auto flex flex-row">
+
+        <div class="lg:w-[1420px] lg:h-[461px] bg-[black] m-auto flex flex-row">
+            <div
+                class="lg:w-[1000px] lg:h-[461px] lg:border-r-4 hidden lg:border-r-gray-500 lg:flex lg:justify-between lg:items-center">
+                <div class="lg:w-[100px]">
+                    <h1 class="lg:text-[white]">Компания</h1>
+
+                    <p class="text-[gray]">каталог компаний</p>
+                    <p class="text-[gray]">Пресс релизы
+                    </p>
+                    <p class="text-[gray]">Публикации</p>
+
+                    <div>
+                        <h1 class="lg:text-[white]">Каталог СИ
+                        </h1>
+
+                        <p class="text-[gray]">Каталог СИ
+                        </p>
+                        <p class="text-[gray]">Обзоры
+                        </p>
+                        <p class="text-[gray]">Анонсы</p>
+                    </div>
+                </div>
+
+                <div class="lg:w-[100px]">
+                    <h1 class="lg:text-[white]">Новости
+                    </h1>
+                    <p class="text-[gray]">Метрология
+                    </p>
+                    <p class="text-[gray]">Стандартизация
+                    </p>
+                    <p class="text-[gray]">Законодательство
+                    </p>
+                    <p class="text-[gray]">Мероприятия
+                    </p>
+                    <p class="text-[gray]">Наука и техника
+                    </p>
+                    <p class="text-[gray]">Новости компаний
+                    </p>
+                    <p class="text-[gray]">Другие новости</p>
+                </div>
+
+                <div class="lg:w-[100px]">
+                    <h1 class="lg:text-[white]">Справочник</h1>
+                    <p class="text-[gray]">Статьи</p>
+                    <p class="text-[gray]">Законодательство
+                    </p>
+                    <p class="text-[gray]">НТД
+                    </p>
+                    <p class="text-[gray]">ГРСИ
+                    </p>
+                    <p class="text-[gray]">Реестр ГРП</p>
+                </div>
+
+                <div class="lg:w-[100px]">
+                    <h1 class="lg:text-[white]">Сообщество
+                    </h1>
+                    <p class="text-[gray]">Форумы
+                    </p>
+                    <p class="text-[gray]">Журнал</p>
+                    <p class="text-[gray]">Файлы</p>
+                    <p class="text-[gray]">Календарь событий</p>
+
+                </div>
+
+
+                <div class="lg:w-[100px]">
+                    <h1 class="lg:text-[white]">Вакансии</h1>
+                    <p class="text-[gray]">Вакансии</p>
+                    <p class="text-[gray]">Резюме</p>
+
+
+                </div>
+
+            </div>
+
+            <div
+                class="lg:w-[520px] lg:flex hidden lg:h-[461px] lg:flex-col lg:justify-center lg:items-center ">
+                <hr class=" lg:w-[460px] lg:m-auto lg:border-solid lg:border-[2px] lg:border-[gray] lg:mt-10">
+
+                <div
+                    class="lg:w-[520px] lg:h-[200px] flex flex-col items-center lg:mt-[-10px] lg:mb-[100px]">
+                    <h1 class="lg:text-[20px]   lg:font-bold lg:text-[gray] lg:mb-1  lg:pt-[-60px]">
+                        (3452)
+                        90-90-09</h1>
+
+                    <a class="lg:text-[20px] lg:text-[20px]  lg:font-bold lg:text-[gray] lg:mb-1 lg:mb-[30px] lg:pt-[20px] lg:pt-[-60px] mb-5 "
+                        href="">office@metrologu.ru</a>
+
+                    <img class=" lg:w-[50px] lg:h-[50px]" src="./Снимок экрана 2026-02-19 101527.png" alt="">
+                </div>
+
+                <hr class=" lg:w-[460px] lg:m-auto lg:border-solid lg:border-[2px] lg:border-[gray] lg:mt-10">
+
+                <div
+                    class="dd lg:w-[520px] lg:h-[200px]  flex flex-col items-center lg:mt-[-100px] lg:mb-[100px]">
+                    <h2 class="lg:text-[18px] lg:text-[20px]  lg:font-bold lg:text-[gray]  ">
+                        Вся активность</h2>
+                    <h2
+                        class="lg:text-[18px] lg:text-[20px]  lg:font-bold lg:text-[gray] lg:mb-1 lg:mb-[10px] lg:pt-[-60px] lg:pt-[10px]">
+                        Политика конфиденциальность</h2>
+                    <h2
+                        class="lg:text-[18px] lg:text-[20px]  lg:font-bold lg:text-[gray] lg:mb-1 lg:mb-[10px]lg:pt-[-60px] lg:pt-[10px]">
+                        Администрация</h2>
+                </div>
+
+                <div class="lg:flex lg:gap-[30px] lg:m-[0px] lg:p-[0px]">
+                    <img class="lg:w-[60px] lg:h-[60px] lg:mt-[-80px]" src="./Снимок экрана 2026-02-19 102732.png"
+                        alt="">
+                    <img class="lg:w-[60px] lg:h-[60px] lg:mt-[-80px]" src="./Снимок экрана 2026-02-19 102746.png"
+                        alt="">
+                </div>
+            </div>
+        </div>
+        <hr>
+        <hr class=" lg:w-[460px] lg:m-auto lg:border-solid lg:border-[2px] lg:border-[gray] lg:mt-10">
+
+
+
+
+    </div>
 
 </body>
 
